syntax="proto3";
option java_package="ma.enset.immatriculationservice.grpc.stubs";


service ImmatriculationService{
  rpc getVehiculesList(ListRequest) returns (getVehiculesListResponse);
  rpc getOwnersList(ListRequest) returns (getOwnersListResponse);
  rpc getVehicule(id) returns (Vehicule);
  rpc getOwner(id) returns (Vehicule);
}
message ListRequest{}
message getVehiculesListResponse{
  repeated Vehicule vehicule=1;
}
message getOwnersListResponse{
  repeated Owner owner=1;
}
message id{
  int64 id=1;
}
message Vehicule{
  int64 id=1;
  int64 matricule_number=2;
  string model=3;
  string marque=4;
  int64 power=5;
  Owner owner=6;
}
message Owner{
  int64 id=1;
  string name=2;
  string date_birth=3;
  string email=4;
  repeated Vehicule vehicules=5;
}